# Polygot

./: .gitignore  .~lock.ElasticsearchLearning.docx#  Cpp-WhatIlearned.txt  CppHour.cpp  CppHour1.cpp  ElasticsearchLearning.docx  ElasticsearchLearning.txt  L1.3_2.cpp  L1.3_4.cpp  L1.3_5_6.cpp  PS4.cpp  PS4.hpp  PS4main.cpp  PointerReference.cpp  QuantnetL2.cpp  a.out  a1  a1.out  testing.c
C/: HW1.c  a.out
C_Cpp/: .~lock.LearningCpp.docx#  .~lock.LearningCpp_SB.docx#  BjarneChpt1  BjarneChpt1.cpp  C_Programming_Language_LessonsLearnt  ConnectToPostgres  ConnectToPostgres.cpp  ConvertToString  ConvertToString.cpp  CstyleMemoryAllocation  CstyleMemoryAllocation.c  DataAggregates  DataAggregates.c  FileOperations  FileOperations.c  LearningCpp.docx  LearningCpp.txt  LearningCpp_SB.docx  Misc.txt  Namespace_Classes_StaticMembers.hpp  PointersReferences  PointersReferences.cpp  TestClassBjarne  TestClassBjarne.cpp  VectorBjarne.cpp  VectorBjarne.hpp  a.out  functionpointers  functionpointers.c  test.txt
C_Cpp/BjarnePPP/: C3E4.cpp  C3E9.cpp  C4E10.cpp  C4E19.cpp  C4E3.cpp  C4E5.cpp  C5E7.cpp  C5E8.cpp  C5S5_6.cpp  C6.cpp  C8_2_3.cpp  C8_7.cpp  C9.cpp  CMakeLists.txt  Circle.h  CppProgrammingLang.txt  CppProgrammingLanguage.cpp  Date.cpp  Date.h  Less_than.h  Myclass.h  Point.h  Practice.cpp  Rational.cpp  Rational.h  Shape.h  Smiley.h  Vec.cpp  Vec.h  Vector.h  complex.cpp  complex.h  std_lib_facilities.h
C_Cpp/EuropeanOption/: EuropeanOption.hpp
C_Cpp/FEDuffy/: AdvancedInheritance.h  CMakeLists.txt  EuropeanOption.cpp  EuropeanOption.h  FEDuffy  FEDuffy.cbp  FunctionPointers.h  Inequalities.cpp  Inequalities.h  Makefile  NonLinearSolver.h  Point.cpp  Point.h  Shape.h  cmake_install.cmake  main.cpp
C_Cpp/TemplatesIntro/: Templates  Templates.cpp  Templates.hpp  Templatesmain.cpp
CmakeTutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ElasticNode/: connection.js  info.js  package.json
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.4/Exercise1/: Exercise1.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.4/Exercise2/: Exercise2.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.5/Exercise1/: Exercise1.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.5/Exercise2/: Exercise2.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.5/Exercise3/: Exercise3.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.5/Exercise4/: Exercise4.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.5/Exercise5/: Exercise5.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.6/Exercise1/: Exercise1.sln
Empire_State_Level_5_HW_-_Tjisana_Kerr_submission/Section3.6/Exercise2/: Exercise2.sln
Empire_State_Level_6_HW_-_Tjisana_Kerr_submission/Section4.2a/Exercise1/: Exercise1.sln
Empire_State_Level_6_HW_-_Tjisana_Kerr_submission/Section4.2b/Exercise1/: Exercise1.sln
Empire_State_Level_6_HW_-_Tjisana_Kerr_submission/Section4.2b/Exercise2/: Exercise2.sln
Empire_State_Level_6_HW_-_Tjisana_Kerr_submission/Section4.2b/Exercise3/: Exercise3.sln
Empire_State_Level_6_HW_-_Tjisana_Kerr_submission/Section4.2b/Exercise4/: Exercise4.sln
Empire_State_Level_6_HW_-_Tjisana_Kerr_submission/Section4.2b/Exercise5/: Exercise5.sln
Empire_State_Level_6_HW_-_Tjisana_Kerr_submission/Section4.2b/Exercise6/: Exercise6.sln
ExcelWork/: Book1.xlsm
ExcelWork/ElasticSearchWrapper/: ElasticSearchWrapper.sln
ExcelWork/ElasticSearchWrapper/ElasticSearchWrapper/: Class1.cs  ElasticSearchWrapper.csproj  packages.config
Java/: HelloWorld.java
Java/workhome/src/: Order.java  RequestPayload.java  (+1 more)
JavaProgramming/: Example.java  TopLevel.Java
JavaProgramming/JPsub/: TopLevel.Java
JavaProgramming/Testing/: Aclass.java
Level_1/HWs/: L1.3.cpp  L1.4.cpp  L1.5.cpp  a.out
Level_2/: L1.7.1.cpp  L1.7.2.cpp  L1.7.3.cpp  L1.8.1  L1.8.1.cpp  a.out  test.cpp
Level_2/1.7/: a.out  tjTestFunctionPointers.cpp
Level_3/: Circle  Circle.cpp  Circle.hpp  Circlemain.cpp  Line  Line.cpp  Line.hpp  Linemain.cpp  Point  Pointmain.cpp
Level_4/: PointArray.cpp
Level_4/2.4/: Complex.cpp  TestComplex
Level_4/ArrayClass/: Array.cpp  Array.hpp  Arraymain.cpp  Arraymain.out  Makefile
Level_4/CircleClass/: Circle  Circle.cpp  Circle.hpp  Circlemain.cpp  Circlemain.out  Makefile
Level_4/LineClass/: Line  Line.cpp  Line.hpp  Linemain.cpp  Makefile
Level_4/PointClass/: Array.cpp  Array.hpp  Arraymain.cpp  Arraymain.out  Makefile  Point  Point.cpp  Point.hpp  PointArray  PointArray.cpp  PointHeap  PointHeap.cpp  Pointmain.cpp
Level_5/: CMakeLists.txt  Exceptions.hpp  Polymorphism.cpp  Polymorphism.out
Level_5/ArrayClass/: Array.cpp  Arraymain.cpp  Arraymain.out  Makefile
Level_5/CircleClass/: Circle.cpp  Circle.hpp  Makefile
Level_5/LineClass/: Line.cpp  Line.hpp  Linemain.cpp  Linemain.out  Makefile
Level_5/PointClass/: Makefile  Point.cpp  Point.hpp  PointInheritance.cpp  PointInheritance.out  Pointmain.cpp
Level_5/ShapeClass/: Shape.cpp  Shape.hpp
Level_6/: Exceptions.cpp  Exceptions.hpp
Level_6/ArrayClass/: Array.cpp  Array.hpp  Arraymain.cpp  Arraymain42bE1.cpp  Arraymain42bE2.cpp  Arraymain42bE4.cpp  Arraymain42bE5.cpp  CMakeLists.txt  NumericArray.cpp  NumericArray.h  Point.cpp  Point.hpp  PointArray.cpp  PointArray.h  Shape.cpp  Stack.cpp  Stack.h  StackException.cpp  StackException.h
Python/: HW1_1.py  LearnPythonHardWay.py  WhatILearned.py  tags
TWS/: CMakeLists.txt
TWS/CppClient/client/: EReader.cpp
TWS/TestCppClient/: Main.cpp  StdAfx.h  TestCppClient  makefile
TestClion/: Array.cpp  Array.h  CMakeCache.txt  CMakeLists.txt  Exceptions.cpp  main.cpp
TestClionREDI/: Array.cpp  Array.h  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  main.cpp  maintest.cpp
twsapi_macunix.973.01/IBJts/: API_VersionNum.txt  CMakeLists.txt
twsapi_macunix.973.01/IBJts/samples/Cpp/TestCppClient/: AvailableAlgoParams.cpp  AvailableAlgoParams.h  Main.cpp  StdAfx.h  TKtradingapp.cpp
twsapi_macunix.973.01/IBJts/source/CppClient/client/: EDecoder.cpp  EDecoder.h
(+395 files in other folders)
