cmake_minimum_required(VERSION 3.6)
project(TWS)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        CppClient/client/CommissionReport.h
        CppClient/client/CommonDefs.h
        CppClient/client/Contract.h
        CppClient/client/ContractCondition.cpp
        CppClient/client/ContractCondition.h
        CppClient/client/DefaultEWrapper.cpp
        CppClient/client/DefaultEWrapper.h
        CppClient/client/EClient.cpp
        CppClient/client/EClient.h
        CppClient/client/EClientMsgSink.h
        CppClient/client/EClientSocket.cpp
        CppClient/client/EClientSocket.h
        CppClient/client/EDecoder.cpp
        CppClient/client/EDecoder.h
        CppClient/client/EMessage.cpp
        CppClient/client/EMessage.h
        CppClient/client/EMutex.cpp
        CppClient/client/EMutex.h
        CppClient/client/EPosixClientSocketPlatform.h
        CppClient/client/EReader.cpp
        CppClient/client/EReader.h
        CppClient/client/EReaderOSSignal.cpp
        CppClient/client/EReaderOSSignal.h
        CppClient/client/EReaderSignal.h
        CppClient/client/EReaderWMSignal.cpp
        CppClient/client/EReaderWMSignal.h
        CppClient/client/ESocket.cpp
        CppClient/client/ESocket.h
        CppClient/client/ETransport.h
        CppClient/client/EWrapper.h
        CppClient/client/Execution.h
        CppClient/client/executioncondition.cpp
        CppClient/client/executioncondition.h
        CppClient/client/IExternalizable.h
        CppClient/client/MarginCondition.cpp
        CppClient/client/MarginCondition.h
        CppClient/client/OperatorCondition.cpp
        CppClient/client/OperatorCondition.h
        CppClient/client/Order.h
        CppClient/client/OrderCondition.cpp
        CppClient/client/OrderCondition.h
        CppClient/client/OrderState.h
        CppClient/client/PercentChangeCondition.cpp
        CppClient/client/PercentChangeCondition.h
        CppClient/client/PriceCondition.cpp
        CppClient/client/PriceCondition.h
        CppClient/client/Resource.h
        CppClient/client/ScannerSubscription.h
        CppClient/client/shared_ptr.h
        CppClient/client/SoftDollarTier.cpp
        CppClient/client/SoftDollarTier.h
        CppClient/client/StdAfx.cpp
        CppClient/client/StdAfx.h
        CppClient/client/TagValue.h
        CppClient/client/TimeCondition.cpp
        CppClient/client/TimeCondition.h
        CppClient/client/TwsSocketClientErrors.h
        CppClient/client/VolumeCondition.cpp
        CppClient/client/VolumeCondition.h
        CppClient/ssl/EClientSocketSSL.cpp
        CppClient/ssl/EClientSocketSSL.h
        CppClient/ssl/EReaderSSL.cpp
        CppClient/ssl/EReaderSSL.h
        CppClient/ssl/ESocketSSL.cpp
        CppClient/ssl/ESocketSSL.h
        CppClient/ssl/StdAfx.cpp
        CppClient/ssl/StdAfx.h
        TestCppClient/AccountSummaryTags.cpp
        TestCppClient/AccountSummaryTags.h
        TestCppClient/AvailableAlgoParams.cpp
        TestCppClient/AvailableAlgoParams.h
        TestCppClient/ContractSamples.cpp
        TestCppClient/ContractSamples.h
        TestCppClient/FAMethodSamples.h
        TestCppClient/Main.cpp
        TestCppClient/OrderSamples.cpp
        TestCppClient/OrderSamples.h
        TestCppClient/ScannerSubscriptionSamples.cpp
        TestCppClient/ScannerSubscriptionSamples.h
        TestCppClient/StdAfx.cpp
        TestCppClient/StdAfx.h
        TestCppClient/TestCppClient
        TestCppClient/TestCppClient.cpp
        TestCppClient/TestCppClient.h
    )

include_directories(CppClient/client)
include_directories(CppClient/ssl)

add_executable(TWS ${SOURCE_FILES})